--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         "codeat3/blade-microns": "^1.5",
         "diglactic/laravel-breadcrumbs": "^8.1",
         "doctrine/dbal": "^3.5",
+        "cviebrock/eloquent-sluggable": "^11.0",
+        "larabug/larabug": "*",
+        "laravel/horizon": "^5.30",
         "fakerphp/faker": "^1.20",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10",
