--- a/composer.json
+++ b/composer.json
@@ -1,90 +1,97 @@
 {
-    "name": "paymenter/paymenter",
-    "type": "project",
-    "description": "Paymenter is a payment platform for webshops",
-    "keywords": ["payment", "platform", "webshop", "laravel"],
-    "license": "MIT",
-    "authors": [{
-            "name": "Corwin van Velthuizen",
-            "email": "corwin@paymenter.org",
-            "homepage": "https://github.com/CorwinDev",
-            "role": "Lead Developer"
-        },
-        {
-            "name": "Paymenter Community",
-            "homepage": "https://github.com/paymenter/paymenter/contributors"
-        }
+  "name": "paymenter/paymenter",
+  "type": "project",
+  "description": "Paymenter is a payment platform for webshops",
+  "keywords": [
+    "payment",
+    "platform",
+    "webshop",
+    "laravel"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Corwin van Velthuizen",
+      "email": "corwin@paymenter.org",
+      "homepage": "https://github.com/CorwinDev",
+      "role": "Lead Developer"
+    },
+    {
+      "name": "Paymenter Community",
+      "homepage": "https://github.com/paymenter/paymenter/contributors"
+    }
+  ],
+  "require": {
+    "php": "^8.1 || ^8.2 || ^8.3",
+    "codeat3/blade-microns": "^1.5",
+    "diglactic/laravel-breadcrumbs": "^8.1",
+    "doctrine/dbal": "^3.5",
+    "cviebrock/eloquent-sluggable": "^10.0",
+    "larabug/larabug": "*",
+    "laravel/horizon": "^5.30",
+    "fakerphp/faker": "^1.20",
+    "guzzlehttp/guzzle": "^7.2",
+    "laravel/framework": "^10",
+    "laravel/sanctum": "^3.2",
+    "laravel/socialite": "^5.5",
+    "laravel/tinker": "^2.7",
+    "livewire/livewire": "^3.0",
+    "qirolab/laravel-themer": "^2.0",
+    "rappasoft/laravel-livewire-tables": "^3.1",
+    "robthree/twofactorauth": "^2.0",
+    "socialiteproviders/discord": "^4.1",
+    "stevebauman/purify": "^6.0",
+    "stripe/stripe-php": "^9.6"
+  },
+  "require-dev": {
+    "barryvdh/laravel-debugbar": "^3.9",
+    "laravel/pint": "^1.0",
+    "laravel/sail": "^1.0.1",
+    "mockery/mockery": "^1.4.4",
+    "nunomaduro/collision": "^7.0",
+    "phpunit/phpunit": "^10.0",
+    "spatie/laravel-ignition": "^2.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
+      "Database\\Seeders\\": "database/seeders/",
+      "Evarioo\\WikiJSPages\\": "packages/evarioo/wikijs-pages/src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi"
     ],
-    "require": {
-        "php": "^8.1 || ^8.2 || ^8.3",
-        "codeat3/blade-microns": "^1.5",
-        "diglactic/laravel-breadcrumbs": "^8.1",
-        "doctrine/dbal": "^3.5",
-        "cviebrock/eloquent-sluggable": "^10.0",
-        "larabug/larabug": "*",
-        "laravel/horizon": "^5.30",
-        "fakerphp/faker": "^1.20",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10",
-        "laravel/sanctum": "^3.2",
-        "laravel/socialite": "^5.5",
-        "laravel/tinker": "^2.7",
-        "livewire/livewire": "^3.0",
-        "qirolab/laravel-themer": "^2.0",
-        "rappasoft/laravel-livewire-tables": "^3.1",
-        "robthree/twofactorauth": "^2.0",
-        "socialiteproviders/discord": "^4.1",
-        "stevebauman/purify": "^6.0",
-        "stripe/stripe-php": "^9.6"
-    },
-    "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.9",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.0",
-        "spatie/laravel-ignition": "^2.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ],
-        "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ]
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "allow-plugins": {
-            "pestphp/pest-plugin": true
-        }
-    },
-    "prefer-stable": true
+    "post-update-cmd": [
+      "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+    ],
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "@php artisan key:generate --ansi"
+    ]
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": []
+    }
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
+  },
+  "prefer-stable": true
 }
