--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,15 @@
       "homepage": "https://github.com/paymenter/paymenter/contributors"
     }
   ],
+  "repositories": [
+    {
+      "type": "path",
+      "url": "packages/evarioo/wikijs-pages",
+      "options": {
+        "symlink": true
+      }
+    }
+  ],
   "require": {
     "php": "^8.1 || ^8.2 || ^8.3",
     "codeat3/blade-microns": "^1.5",
