--- a/packages/evarioo/wikijs-pages/composer.json
+++ b/packages/evarioo/wikijs-pages/composer.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "post-update-cmd": [
-      "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+      "@php artisan vendor:publish --tag=evarioo-wikijs --ansi"
     ]
   },
   "extra": {
